--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@ We oversee everyone involved in completing your project, which means there will 
         </ul>
         <p><i class="fa fa-map-marker"></i> 212 Powell Drive, Suite 102, Raleigh, North Carolina 27606</p>
    
-        <p>Copyright &copy; CADCO Constuction Company</p>
+        <p>Copyright &copy; Site Developed By Level 1 Construction Marketing</p>
     </div>
 </section>
 
 <!-- jQuery -->
-<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
